--- a/Views/Editorial/Index.cshtml
+++ b/Views/Editorial/Index.cshtml
@@ -25,9 +25,12 @@
                             </h2>
                             <p class="text-muted mb-0">Administra las editoriales disponibles para asociar a los libros</p>
                         </div>
-                        <button type="button" class="btn btn-autores-primary" data-bs-toggle="modal" data-bs-target="#modalAgregarEditorial">
-                            <i class="fas fa-plus"></i> Nueva Editorial
-                        </button>
+                        @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
+                        {
+                            <button type="button" class="btn btn-autores-primary" data-bs-toggle="modal" data-bs-target="#modalAgregarEditorial">
+                                <i class="fas fa-plus"></i> Nueva Editorial
+                            </button>
+                        }
                     </div>
 
                     <!-- Búsqueda -->
@@ -58,7 +61,10 @@
                                 <thead>
                                     <tr>
                                         <th>Nombre</th>
-                                        <th class="text-center" style="width:220px;">Acciones</th>
+                                        @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
+                                        {
+                                            <th class="text-center" style="width:220px;">Acciones</th>
+                                        }
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -67,18 +73,26 @@
                                         <tr>
                                             <td>@e.Nombre</td>
                                             <td class="text-center">
-                                                <button class="btn btn-action btn-action-edit"
-                                                        data-bs-toggle="modal" data-bs-target="#modalEditarEditorial"
-                                                        data-id="@e.IdEditorial" data-nombre="@e.Nombre"
-                                                        title="Editar">
-                                                    <i class="fas fa-edit"></i>
-                                                </button>
-                                                <button class="btn btn-action btn-action-deactivate"
-                                                        data-bs-toggle="modal" data-bs-target="#modalEliminarEditorial"
-                                                        data-id="@e.IdEditorial" data-nombre="@e.Nombre"
-                                                        title="Eliminar">
-                                                    <i class="fas fa-trash-alt"></i>
-                                                </button>
+                                                @if (User.IsInRole("Admin") || User.IsInRole("Supervisor"))
+                                                {
+                                                    <div class="btn-actions-group justify-content-center">
+                                                        <!-- Editar -->
+                                                        <button type="button" class="btn btn-action btn-action-edit"
+                                                                data-bs-toggle="modal" data-bs-target="#modalEditarEditorial"
+                                                                data-id="@e.IdEditorial" data-nombre="@e.Nombre"
+                                                                title="Editar Editorial">
+                                                            <i class="fas fa-edit icon-elegant"></i>
+                                                        </button>
+
+                                                        <!-- Eliminar -->
+                                                        <button type="button" class="btn btn-action btn-action-deactivate"
+                                                                data-bs-toggle="modal" data-bs-target="#modalEliminarEditorial"
+                                                                data-id="@e.IdEditorial" data-nombre="@e.Nombre"
+                                                                title="Eliminar Editorial">
+                                                            <i class="fas fa-trash-alt icon-elegant"></i>
+                                                        </button>
+                                                    </div>
+                                                }
                                             </td>
                                         </tr>
                                     }
